import java.util.*;

public class ApiFacebook {

    public List<String> friends(String facebookId) {
     return null;
    }

    public List<String> status(String facebookId) {
        return null;
    }
}
