import java.util.*;

public interface ApiRedSocial {
    List<String> seguidores(String userId);
    Integer posts(String userId);
}
